# gan-cv-simulator

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPECIFICATION.md  cargo  dist-workspace.toml  install.sh  parameters_GaN.txt  parameters_HEMT.txt  parameters_HEMT_2mesh.txt  parameters_MOS-HEMT_3mesh.txt
.github/workflows/: ci.yaml  docs.yaml  release.yaml
.serena/: project.yml
config/: example-AlGaN-GaN-MOS.json  example-AlGaN-GaN-schottky.json  example-AlGaN-GaN-schottoky.json  example-GaN-MOS-multi-discrete.json  example-GaN-MOS.json  example-GaN-MOS.json.json  example-GaN-schottky.json
docs/: parameters.md  physics.md
docs/design/: 2026-04-12-ratatui-tui-design.md
docs/specs/: 2026-03-31-occupation-probability-design.md  2026-03-31-occupation-probability-plan.md
docs/superpowers/plans/: 2026-04-08-newton-raphson-solver.md
docs/superpowers/specs/: 2026-03-25-capture-cross-section-config-design.md  2026-04-08-newton-raphson-solver-design.md
k8s/: deployment.yaml  pv.yaml  pvc.yaml
src/: fixcharge.rs  main.rs  print_structure.rs  structure.rs  utils.rs
src/cli/: boundary_conditions.rs  configuration_builder.rs  device_definition.rs  fixcharge.rs  measurement.rs  mesh.rs  mod.rs  parameters_definition.rs  structure.rs
src/config/: boundary_conditions.rs  capture_cross_section.rs  config_source.rs  configuration_builder.rs  fixcharge.rs  interface_states.rs  measurement.rs  mesh.rs  mod.rs  sim_settings.rs  structure.rs
src/constants/: mod.rs  physics.rs  simulation.rs  units.rs
src/electrostatics/: poisson_solver.rs  solver.rs
src/mesh/: mesh_builder.rs  mod.rs
src/mesh_builder/: mesh_builder.rs  mod.rs
src/mesh_structure/: mesh_structure.rs
src/physics_equations/: band_density.rs  capture_cross_section.rs  conduction_band_density.rs  donor_activation.rs  electron_density.rs  equations.rs  equilibrium_potential.rs  fermi_dirac.rs  interface_states.rs  mod.rs  srh_statics.rs  srh_statistics.rs
src/plot/: cv.rs  mod.rs  style.rs  utils.rs
src/save_files/: cv_curves.rs  interface_states.rs  mod.rs  potential_profile.rs
src/solvers/: cv_solver.rs  mod.rs  poisson_solver.rs
src/solvers/save_files/: potential_profile.rs
src/structure/: device_definition.rs  fixcharge.rs  mod.rs
src/tui/: app.rs  mod.rs  preview.rs  render.rs  types.rs
src/tui/forms/: measurement.rs  mod.rs  sim_settings.rs  structure.rs
(+4 files in other folders)
