[package]
name = "gan-cv-simulator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Simulate the C-V characteristics of n-GaN and GaN HEMTs diodes."
repository = "https://github.com/WideBandAI/gan-cv-simulator"
homepage = "https://github.com/WideBandAI/gan-cv-simulator"
documentation = "https://docs.rs/gan-cv-simulator"
readme = "README.md"

[dependencies]
anyhow = "1.0.95"
approx = "0.5.1"
indicatif = "0.18.4"
plotters = "0.3.7"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.26.0"
test-case = "3.3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
